# MPCCHILE

./: README.md  VERCEL_DEPLOYMENT.md  add_normativa.py  add_normativa.py.py  data_loader.py  ontology.json  package-lock.json  package.json  pyproject.toml  relations.json  server.py  tsconfig.json
pages/: index.js
pages/api/: concept.js  health.js  search.js  stats.js
styles/: globals.css
